To fix the changes     i. First Name not accepting space     iii. CHange pass word can have Show password     iv. Reference email link field accepts normal words     v. Domain  Worked -  \ Timber logistics Paper mill \     vi. Save and Close -  Profile Preview can have a close button     vii. CAn have auto save of data  - was unable to save and close in last step.. have to enter data again

--- a/frontend/src/app/modules/features/common/reset-password/reset-password.component.html
+++ b/frontend/src/app/modules/features/common/reset-password/reset-password.component.html
@@ -5,16 +5,16 @@
         <h1>Reset Password</h1>
         <div class="form-group">
           <label>New Password</label>
-          <div appMarkAsterisk class="input-with-icon">
-            <input type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
+          <div appMarkAsterisk class="input-with-icon input-group">
+            <input appPassword type="password" class="form-control" [placeholder]="'Password'" formControlName="password">
             <i class="fas fa-lock"></i>
           </div>
           <app-control-messages [control]="f['password']"></app-control-messages>
         </div>
         <div class="form-group">
           <label>Confirm Password</label>
-          <div appMarkAsterisk class="input-with-icon">
-            <input type="password" class="form-control" [placeholder]="'Password'" formControlName="confirmPassword">
+          <div appMarkAsterisk class="input-with-icon input-group">
+            <input appPassword type="password" class="form-control" [placeholder]="'Password'" formControlName="confirmPassword">
             <i class="fas fa-lock"></i>
           </div>
           <app-control-messages [control]="f['confirmPassword']"></app-control-messages>
