--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -579,6 +579,7 @@ a:hover {
     background-color: transparent;
     border: 0;
     border-bottom: 1px solid #f8f8f8;
+	cursor:pointer;
 }
 .theme-nav .dropdown-item:hover{
 	background: #ffffff;
