--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -7,10 +7,10 @@
       </div>
       <div class="col-lg-12">
         <ul class="quick-links">
-        <li> <a href="index.html">Home</a> </li>
-        <li> <a href="#">Privacy Policy</a> </li>
-        <li> <a href="#">Terms &amp; Conditions</a> </li>
-        <li> <a href="#">Legal Policy</a> </li>
+        <li> <a href="#">Home</a> </li>
+        <li> <a [routerLink]="['/privacy-policy']" href="javascript:;">Privacy Policy</a> </li>
+        <li> <a [routerLink]="['/terms-and-conditions']" href="javascript:;">Terms &amp; Conditions</a> </li>
+        <li> <a [routerLink]="['/cookie-policy']" href="javascript:;">Legal Policy</a> </li>
         </ul>
       </div>
       <div class="col-lg-12">
