--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
@@ -80,7 +80,7 @@
 		  </form>
 		</div>
 		<div *ngIf="(companyProfileInfo.invite_status != true  || inviteStatusView ==false) && isShowForm ==false">
-			<!--<div class="row ">
+			<div class="row ">
 			<div class="col-lg-6 col-md-12">
 			<img src="assets/images/appointment.png" class="img-fluid mx-auto"/>
 			</div>
@@ -99,9 +99,9 @@
 				  <span></span>
 				  <span></span>
 				  {{"common.inviteSettingsAddCustom" | translate}}
-				</a>
+				</a>-->
 			</div>
-			</div>-->
+			</div>
 		</div>
 	</div>
 	<div *ngIf="currentTabInfo.tabNumber == 3  ">
