Employer 1.About us field is not madidary field , its occur max required error 2.education is null , it occur alignment issue in matches page 4. Posted job back button issues
User
1.In zipcode , max character validation msg not showing
2.Job applied backbutton issues

--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -146,7 +146,7 @@
 							<!-- <a><i class="fas fa-ellipsis-v doticonss"></i></a> -->
 							
 						</li>
-						<li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+						<li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
 				   </ul>   
 				</div>
 				
@@ -659,7 +659,7 @@
 								<p>--</p>
 							</ng-template>
 						</li>
-						<li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+						<li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
 				   </ul>
 				</div>
 				<div *ngIf="postedJobsDetails?.match_select?.programming_skills=='1'">
@@ -1170,7 +1170,7 @@
 								<p>--</p>
 							</ng-template>
 						</li>
-						<li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+						<li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
 				   </ul>
 				</div>
 				<div *ngIf="postedJobsDetails?.match_select?.programming_skills=='2'">
@@ -1682,7 +1682,7 @@
 								<p>--</p>
 							</ng-template>
 						</li>
-						<li><a [ngbPopover]="popContent" > <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+						<li style="margin:auto;"><a [ngbPopover]="popContent" > <i class="fas fa-ellipsis-v doticonss"></i></a></li>
 				   </ul>
 				</div>
 				<div *ngIf="postedJobsDetails?.match_select?.programming_skills==''">
