--- a/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-matches/shared-job-profile-matches.component.html
@@ -117,7 +117,7 @@
                           <p>--</p>
                         </ng-template>
                       </li>
-					  <li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+					  <li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
                 </ul>
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.programming_skills=='0'">
@@ -339,7 +339,7 @@
                           <i class="fa fa-check text-green "></i>
                           {{jobInfo.education}}
                         </span>
-                        <span *ngIf="missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')">
+                        <span *ngIf="(missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')) || (missingElement && userInfo?.education_degree.length ==0 && jobInfo.education.length>0)">
                           <i class="fa fa-times text-danger "></i>
                           {{jobInfo.education}}
                         </span>
@@ -542,7 +542,7 @@
                           <p>--</p>
                         </ng-template>
                       </li>
-					  <li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+					  <li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
                 </ul>
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.programming_skills=='1'">
@@ -764,7 +764,7 @@
                           <i class="fa fa-check text-green "></i>
                           {{jobInfo.education}}
                         </span>
-                        <span *ngIf="missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')">
+                        <span *ngIf="(missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')) || (missingElement && userInfo?.education_degree.length ==0 && jobInfo.education.length>0)">
                           <i class="fa fa-times text-danger "></i>
                           {{jobInfo.education}}
                         </span>
@@ -969,7 +969,7 @@
                           <p>--</p>
                         </ng-template>
                       </li>
-					  <li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+					  <li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
                 </ul>
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.programming_skills=='2'">
@@ -1191,7 +1191,7 @@
                           <i class="fa fa-check text-green "></i>
                           {{jobInfo.education}}
                         </span>
-                        <span *ngIf="missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')">
+                        <span *ngIf="(missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')) || (missingElement && userInfo?.education_degree.length ==0 && jobInfo.education.length>0)">
                           <i class="fa fa-times text-danger "></i>
                           {{jobInfo.education}}
                         </span>
@@ -1399,7 +1399,7 @@
                           <p>--</p>
                         </ng-template>
                       </li>
-					  <li><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
+					  <li style="margin:auto;"><a [ngbPopover]="popContent"> <i class="fas fa-ellipsis-v doticonss"></i></a></li>
                 </ul>
 			</div>
 			<div class="  info-box" *ngIf="jobInfo.match_select?.programming_skills==''">
@@ -1621,7 +1621,7 @@
                           <i class="fa fa-check text-green "></i>
                           {{jobInfo.education}}
                         </span>
-                        <span *ngIf="missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')">
+                        <span *ngIf="(missingElement && checkType(userInfo?.education_qualification,jobInfo.education,'missing')) || (missingElement && userInfo?.education_degree.length ==0 && jobInfo.education.length>0)">
                           <i class="fa fa-times text-danger "></i>
                           {{jobInfo.education}}
                         </span>
