--- a/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
+++ b/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="modal-footer">
     <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-    <a [href]="(url ? url : 'javascript:;')">
+    <a [href]="(url ? url : 'javascript:;')" target="_blank">
       <button type="button" class="btn btn-primary btn-sm" >Download Resume</button>
     </a>
     </div>
