--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -3824,7 +3824,7 @@ ul.timeline > li span:hover {
    font-weight:bolder;
 }
 .slideanimations{
-  animation: moveleft 0.6s;
+  animation: moveleft 0.9s;
 }
 
 @keyframes moveleft {
@@ -3836,7 +3836,7 @@ ul.timeline > li span:hover {
     }
 }
 .slidearight{
-  animation: moveright 0.6s;
+  animation: moveright 1.1s;
 }
 
 @keyframes moveright {
@@ -3954,7 +3954,7 @@ ul.timeline > li span:hover {
 }
 .ee-count {
     position: absolute;
-    top: -74px;
+    top: 29px;
     right: 46px;
 }
 .ee-count .count-num {
@@ -4048,5 +4048,14 @@ policy-sec {
 .policy-sec .table td, .policy-sec .table th {
    white-space: unset!important;
 }
+
+.match-details {
+    position: absolute;
+    top: 105px;
+    z-index: 9;
+	width: 46%;
+	background: #fff;
+}
+
 
 
