--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -142,7 +142,7 @@ a:hover {
     padding: .6rem 1.75rem;
     font-size: 1.0rem;
     line-height: 1.75;
-    border-radius: .3rem;
+    border-radius: 10px;
 }
 .btn-theme-blue {
     color: #fff;
