--- a/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/shared/component/modal/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
           </div>
           <div class="form-group mt-3">
             <button [disabled]="!forgotPasswordForm.valid" type="submit" class="btn btn-theme-blue btn-block btn-lg">
-              <span [hidden]="isLoading">Submit</span>
+              <span [hidden]="isLoading">Forgot Password</span>
               <span [hidden]="!isLoading">
                 <i class="fa fa-spinner" aria-hidden="true"></i>
               </span>
