--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -105,7 +105,7 @@
 			<div class=" form-group">
 				<label>{{"userProfile.nationality" | translate }} </label> 
 				<select appMarkAsterisk formControlName="nationality" class="form-control" (change)="onChangeCountry($event.target.value)">
-					<option  disabled >Please Select {{"userProfile.nationality" | translate }}</option>
+					<option value=null disabled>Please Select {{"userProfile.nationality" | translate }}</option>
 					<option *ngFor="let name of nationality" value={{name.id}}>{{name.nicename}}</option>
 				  </select>		
 			  <app-control-messages [control]="f['nationality']"></app-control-messages>							  
