--- a/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
+++ b/frontend/src/app/modules/features/employer/profile/calendar/calendar.component.html
@@ -17,13 +17,13 @@
     <div class="row">
       <div class="col-lg-12 title">
 		<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-		  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
+		  <!--<li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
 			<a
 			(click)="onTabChange({tabName: 'inviteLink', tabNumber: 2})"
 			 href="javascript:;" class="nav-link" [ngClass]="{'active': currentTabInfo.tabNumber == 2}">
 			 {{"common.inviteSettings" | translate}}
 			</a>
-		  </li>
+		  </li>-->
 		  <li class="nav-item" [ngClass]="{'active': currentTabInfo.tabNumber == 3}">
 			<a
 			(click)="onTabChange({tabName: 'calender', tabNumber: 3})"
@@ -35,7 +35,7 @@
       </div>
     </div>
 	
-	<div *ngIf="currentTabInfo.tabNumber == 2  ">
+	<!--<div *ngIf="currentTabInfo.tabNumber == 2  ">
 		<div *ngIf="(companyProfileInfo.invite_status == true || inviteStatusView == true ) && isShowForm ==true">
 		  <form method="post" #companyNgForm="ngForm" [formGroup]="createCompanyForm" (ngSubmit)="onSaveComapnyInfoInvite()">
 			<div class="container">
@@ -60,7 +60,7 @@
 								style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
 							 <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green ml-2"
 								style="line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button> -->
-						</div>
+						<!--</div>
 					</ng-container>
 				</div>
 			  </div>
@@ -77,7 +77,7 @@
 				  </div>
 				</div>
 			  </div> -->
-		  </form>
+		<!--  </form>
 		</div>
 		<div *ngIf="(companyProfileInfo.invite_status != true  || inviteStatusView ==false) && isShowForm ==false">
 			<div class="row ">
@@ -99,11 +99,11 @@
 				  <span></span>
 				  <span></span>
 				  {{"common.inviteSettingsAddCustom" | translate}}
-				</a>-->
-			</div>
+				</a> -->
+			<!--</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<div *ngIf="currentTabInfo.tabNumber == 3  ">
 		<ejs-schedule width='100%'  height='600px'   #scheduleObj id="schedule" cssClass='schedule-print'  (eventRendered)="onEventRendered($event)" (popupOpen)='onPopupOpen($event)'  (actionBegin)="onSaveClick($event)" [currentView]='currentView' [eventSettings]='eventSettings'>
 			<e-views>   
