--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -88,7 +88,7 @@
       <div class="col-lg-4 col-md-6 matches-8">
         <div class=" form-group">
           <label>{{"shared.zipCode" | translate}}</label>
-          <input appMarkAsterisk  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
+          <input appMarkAsterisk formControlName="zipcode" type="text" class="form-control" [placeholder]="'shared.zipCode' | translate">
           <app-control-messages [control]="f['zipcode']"></app-control-messages>
         </div>
       </div>
