--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -54,7 +54,7 @@
           </div>
           <div class=" form-group">
             <label>{{"shared.zipCode" | translate}}</label>
-            <input autocomplete="disabled" [maxLength]="8" autocomplete="disabled"  OnlyNumber="true" formControlName="zipcode" type="text" class="form-control"
+            <input autocomplete="disabled" [maxLength]="8" autocomplete="disabled"  formControlName="zipcode" type="text" class="form-control"
               [placeholder]="'shared.zipCode' | translate">
               <app-control-messages [control]="f['zipcode']"></app-control-messages>
           </div>
