--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -12,8 +12,8 @@
 	<div class="row mt-2">
 		<div class="col-lg-4 col-md-6 matches-8">
 			<div class=" form-group">
-				<label>{{"shared.jobTitle" | translate}}</label>
-				<input appMarkAsterisk formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'shared.jobTitle' | translate"/>
+				<label>{{"shared.jobTitle" | translate}}<span class="required-asterisk">*</span></label>
+				<input formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'shared.jobTitle' | translate"/>
 			</div>
 			<app-control-messages [control]="f['title']"></app-control-messages>
 		</div>
@@ -34,7 +34,7 @@
 		<div class="col-lg-4 col-md-6 matches-8 ">
 			<div class=" form-group">
 				<label>{{"shared.jobType" | translate}}</label>
-				<select (change)="onChangeJobType($event?.target?.value)" appMarkAsterisk formControlName="type" class="form-control" name="type">
+				<select (change)="onChangeJobType($event?.target?.value)"  formControlName="type" class="form-control" name="type">
 					<option value="" selected="" >Select Job Type</option>
 					<option  value="1000">Full Time</option>
 					<option  value="1001">Part Time</option>
