To fix the current developer name not showing in matches cardTo list all the timezone in the meeting invitationTo add the timezone details in the calender To add the meeting invitation details to employer calander

--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -203,7 +203,7 @@
 										<p>{{items?.comments}}</p>
 										
 										<h6 style="margin-bottom:2px;" *ngIf="items?.link">History</h6>
-										<p *ngIf="items?.link">You have been sent an meeting invitation on <span class="blu" >{{items?.date | date: 'longDate' }} </span> at <span class="blu" >{{items?.date | date: 'shortTime' }} </span> </p>
+										<p *ngIf="items?.link">You have been sent a meeting invitation on <span class="blu" >{{items?.date | date: 'longDate' }} </span> at <span class="blu" >{{items?.date | date: 'shortTime' }} </span> </p>
 										<!--<h6 style="font-size: 11px;margin-bottom:5px;" *ngIf="items?.rescheduled || items?.invited || items?.created || items?.canceled">History</h6>
 										<p *ngIf="items?.invited">You have been sent the invite link on <span class="blu" >{{items?.invited | date: 'longDate' }} </span> at <span class="blu" >{{items?.invited | date: 'shortTime' }} </span> </p>
 										<p *ngIf="items?.created">Accepted the invite link on <span class="gre" >{{items?.created | date: 'longDate' }} </span> at <span class="gre" >{{items?.created | date: 'shortTime' }} </span> </p>
@@ -347,6 +347,34 @@
 					<option value="AST">AST</option>
 					<option  value="UTC">UTC</option>
 					<option  value="GMT">GMT</option>
+					<option  value="ECT">ECT</option>
+					<option  value="EET">EET</option>
+					<option  value="ART">ART</option>
+					<option  value="EAT">EAT</option>
+					<option  value="MET">MET</option>
+					<option  value="NET">NET</option>
+					<option  value="PLT">PLT</option>
+					<option  value="IST">IST</option>
+					<option  value="BST">BST</option>
+					<option  value="VST">VST</option>
+					<option  value="CTT">CTT</option>
+					<option  value="JST">JST</option>
+					<option  value="ACT">ACT</option>
+					<option  value="AET">AET</option>
+					<option  value="NST">NST</option>
+					<option  value="MIT">MIT</option>
+					<option  value="HST">HST</option>
+					<option  value="PST">PST</option>
+					<option  value="PNT">PNT</option>
+					<option  value="MST">MST</option>
+					<option  value="CST">CST</option>
+					<option  value="EST">EST</option>
+					<option  value="IET">IET</option>
+					<option  value="PRT">PRT</option>
+					<option  value="CNT">CNT</option>
+					<option  value="AGT">AGT</option>
+					<option  value="BET">BET</option>
+					<option  value="CAT">CAT</option>
 				</select>
       </div>
 	  </div>
