--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.css
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.css
@@ -158,3 +158,27 @@ ul.statusHistory .content p{
     font-weight: 700;
     font-size: 1rem;
 }
+input[type="time"]::-webkit-calendar-picker-indicator{
+    display: none;
+}
+
+.safari_only{
+		  display:none;
+		  }
+		  
+.chrome_display{
+	 display:block;
+	}
+		  
+@media not all and (min-resolution:.001dpcm) { 
+     @supports (-webkit-appearance:none) {
+			
+	.chrome_display{
+	 display:none;
+	 }
+     .safari_only{
+          display:block;
+		  }
+	
+    }
+}
