--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -43,7 +43,7 @@
 			<div class="row">
 				<div class="col-xl-12 col-lg-12 col-md-6">										
 					<div class="match-details">										
-						<app-shared-user-profile-job-matches [isMultipleMatches]="isMultipleMatches" [fieldsExclude]="{clients_worked: true, job_role: true, willing_to_relocate: true}" [userInfo]="userInfo" [postedJobsDetails]="matchingJob?.jobs"></app-shared-user-profile-job-matches>
+						<app-shared-user-profile-job-matches [isMultipleMatches]="true" [fieldsExclude]="{clients_worked: true, job_role: true, willing_to_relocate: true}" [userInfo]="userInfo" [postedJobsDetails]="matchingJob?.jobs"></app-shared-user-profile-job-matches>
 					</div>	
 					<div id="carouselProfile" class="carousel slide" data-interval="false" data-ride="carousel" >
 					  <!--PrevNext-->
